--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <TH>Topics</TH>
                 </TR>
                 <TR>
-                    <TD><a href="file:///Users/Aaron/Desktop/CS%20Project/Fun%20and%20Games.html" class="button">My Favorite Facts</a>
+                    <TD><a href="https://github.com/tam42990/tam42990.github.io/blob/master/Fun%20and%20Games.html" class="button">My Favorite Facts</a>
                    </TD> 
                 </TR>
           
