--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
                     <TH>Topics</TH>
                 </TR>
                 <TR>
-                    <TD><a href="https://github.com/tam42990/tam42990.github.io/blob/master/Fun%20and%20Games.html" class="button">My Favorite Facts</a>
+                    <TD><a href="Fun and Games.html" class="button">My Favorite Facts</a>
                    </TD> 
                 </TR>
           
                 <TR>
-                    <TD><a href="file:///Users/Aaron/Desktop/CS%20Project/Art%20Gallery.html" class="button">A Swiftly Drawn Collection of MS Paint Art</a></TD>
+                    <TD><a href="Art Gallery.html" class="button">A Swiftly Drawn Collection of MS Paint Art</a></TD>
                 </TR>
             </TABLE>
         </div> 
@@ -32,7 +32,7 @@
                 <LI STYLE="color:Purple;font-size:16pt">Balloons</LI>
                 <LI STYLE="color:Green">A cool hat collection</LI>
                 <LI STYLE="font-size:20pt;color:lightblue">Links to
-                    <a href="file:///Users/Aaron/Desktop/CS%20Project/Surprises.html" STYLE="font-size:20pt;color:lightblue;text-decoration:none">
+                    <a href="Surprises.html" STYLE="font-size:20pt;color:lightblue;text-decoration:none">
                         secret, recently decrypted
                     </a>
                     documents</LI>
